--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-route": "~1.3.5",
     "angular-bootstrap": "0.11.2",
     "bootstrap": "~3.3.1",
-    "materialize": "~0.95.1"
+    "materialize": "~0.95.1",
+    "hammerjs": "latest"
   },
   "resolutions": {
     "angular": "1.3.11",
